@@ -34,7 +34,6 @@
 	/* Includes: */
 		#include <avr/io.h>
 		#include <avr/interrupt.h>
-		#include <util/atomic.h>
 		#include <stdbool.h>
 		#include <stddef.h>
 		
